--- a/bikenwloops.yaml
+++ b/bikenwloops.yaml
@@ -3,7 +3,9 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - appnope=0.1.4=pyhd8ed1ab_0
   - arpack=3.8.0=nompi_ha3438d0_101
+  - asttokens=2.4.1=pyhd8ed1ab_0
   - attrs=23.2.0=pyh71513ae_0
   - azure-core-cpp=1.10.3=he231e37_1
   - azure-storage-blobs-cpp=12.10.0=h6aa02a4_0
@@ -26,10 +28,14 @@ dependencies:
   - click-plugins=1.1.1=py_0
   - cligj=0.7.2=pyhd8ed1ab_1
   - colorama=0.4.6=pyhd8ed1ab_0
+  - comm=0.2.1=pyhd8ed1ab_0
   - contourpy=1.2.0=py312h76e736e_0
   - cycler=0.12.1=pyhd8ed1ab_0
+  - debugpy=1.8.1=py312h20a0b95_0
+  - decorator=5.1.1=pyhd8ed1ab_0
   - distlib=0.3.8=pyhd8ed1ab_0
   - exceptiongroup=1.2.0=pyhd8ed1ab_2
+  - executing=2.0.1=pyhd8ed1ab_0
   - expat=2.5.0=hb7217d7_1
   - filelock=3.13.1=pyhd8ed1ab_0
   - fiona=1.9.5=py312hd158ed5_3
@@ -58,10 +64,17 @@ dependencies:
   - icu=73.2=hc8870d7_0
   - identify=2.5.35=pyhd8ed1ab_0
   - idna=3.6=pyhd8ed1ab_0
+  - importlib-metadata=7.0.1=pyha770c72_0
+  - importlib_metadata=7.0.1=hd8ed1ab_0
   - iniconfig=2.0.0=pyhd8ed1ab_0
+  - ipykernel=6.29.2=pyh3cd1d5f_0
+  - ipython=8.21.0=pyh707e725_0
+  - jedi=0.19.1=pyhd8ed1ab_0
   - jinja2=3.1.3=pyhd8ed1ab_0
   - joblib=1.3.2=pyhd8ed1ab_0
   - json-c=0.17=h40ed0f5_0
+  - jupyter_client=8.6.0=pyhd8ed1ab_0
+  - jupyter_core=5.7.1=py312h81bd7bf_0
   - kealib=1.5.3=h210d843_0
   - kiwisolver=1.4.5=py312h389731b_1
   - krb5=1.21.2=h92f50d5_0
@@ -102,6 +115,7 @@ dependencies:
   - libprotobuf=4.25.1=h810fc01_1
   - libre2-11=2023.06.02=h1753957_0
   - librttopo=1.1.0=hc8f776e_15
+  - libsodium=1.0.18=h27ca646_1
   - libspatialindex=1.9.3=hbdafb3b_4
   - libspatialite=5.1.0=h69abc6b_4
   - libsqlite=3.45.1=h091b4b1_0
@@ -118,9 +132,11 @@ dependencies:
   - mapclassify=2.6.1=pyhd8ed1ab_0
   - markupsafe=2.1.5=py312he37b823_0
   - matplotlib-base=3.8.3=py312ha6faf65_0
+  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
   - minizip=4.0.4=hc35e051_0
   - munkres=1.1.4=pyh9f0ad1d_0
   - ncurses=6.4=h463b476_2
+  - nest-asyncio=1.6.0=pyhd8ed1ab_0
   - networkx=3.2.1=pyhd8ed1ab_0
   - nodeenv=1.8.0=pyhd8ed1ab_0
   - nspr=4.35=hb7217d7_0
@@ -130,7 +146,10 @@ dependencies:
   - openssl=3.2.1=h0d3ecfb_0
   - packaging=23.2=pyhd8ed1ab_0
   - pandas=2.2.0=py312h88edd18_0
+  - parso=0.8.3=pyhd8ed1ab_0
   - pcre2=10.42=h26f9a81_0
+  - pexpect=4.9.0=pyhd8ed1ab_0
+  - pickleshare=0.7.5=py_1003
   - pillow=10.2.0=py312hac22aec_0
   - pip=24.0=pyhd8ed1ab_0
   - pixman=0.43.2=hebf3989_0
@@ -141,8 +160,13 @@ dependencies:
   - postgresql=16.2=h1d0603d_0
   - pre-commit=3.6.2=pyha770c72_0
   - proj=9.3.1=h93d94ba_0
+  - prompt-toolkit=3.0.42=pyha770c72_0
+  - psutil=5.9.8=py312he37b823_0
   - pthread-stubs=0.4=h27ca646_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
   - pycparser=2.21=pyhd8ed1ab_0
+  - pygments=2.17.2=pyhd8ed1ab_0
   - pyparsing=3.1.1=pyhd8ed1ab_0
   - pyproj=3.6.1=py312h4d912e0_5
   - pysocks=1.7.1=pyha2e5f31_6
@@ -154,6 +178,7 @@ dependencies:
   - python_abi=3.12=4_cp312
   - pytz=2024.1=pyhd8ed1ab_0
   - pyyaml=6.0.1=py312h02f2b3b_1
+  - pyzmq=25.1.2=py312h1edf716_0
   - re2=2023.06.02=h6135d0a_0
   - readline=8.2=h92ec313_1
   - requests=2.31.0=pyhd8ed1ab_0
@@ -165,17 +190,22 @@ dependencies:
   - six=1.16.0=pyh6c4a22f_0
   - snappy=1.1.10=h17c5cce_0
   - sqlite=3.45.1=hf2abe2d_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
   - texttable=1.7.0=pyhd8ed1ab_0
   - threadpoolctl=3.3.0=pyhc1e730c_0
   - tiledb=2.20.0=h49d9ff7_0
   - tk=8.6.13=h5083fa2_1
   - tomli=2.0.1=pyhd8ed1ab_0
+  - tornado=6.4=py312he37b823_0
+  - traitlets=5.14.1=pyhd8ed1ab_0
+  - typing_extensions=4.9.0=pyha770c72_0
   - tzcode=2024a=h93a5062_0
   - tzdata=2024a=h0c530f3_0
   - ukkonen=1.0.1=py312h389731b_4
   - uriparser=0.9.7=hb7217d7_1
   - urllib3=2.2.1=pyhd8ed1ab_0
   - virtualenv=20.25.0=pyhd8ed1ab_0
+  - wcwidth=0.2.13=pyhd8ed1ab_0
   - wheel=0.42.0=pyhd8ed1ab_0
   - xerces-c=3.2.5=hf393695_0
   - xorg-libxau=1.0.11=hb547adb_0
@@ -183,5 +213,7 @@ dependencies:
   - xyzservices=2023.10.1=pyhd8ed1ab_0
   - xz=5.2.6=h57fd34a_0
   - yaml=0.2.5=h3422bc3_2
+  - zeromq=4.3.5=h965bd2d_0
+  - zipp=3.17.0=pyhd8ed1ab_0
   - zlib=1.2.13=h53f4e23_5
   - zstd=1.5.5=h4f39d0f_0
