--- a/config.yml
+++ b/config.yml
@@ -14,7 +14,8 @@ looplength_min: 5000 # 5000 / 10000
 looplength_max: 20000 # 20000 / 40000
 
 # SPECIFICATION PARAMETERS
-# These parameters come from the DKNT specification.
+# These parameters come from the DKNT specification at:
+# https://www.kystognaturturisme.dk/dansk-kyst-og-naturturisme/vidensbank/metodehaandbog-kommunal-kvalificering-af-danmarks-rekreative-cykelnetvaerk
 
 # Provide the maximum length acceptable without a water
 # source, in meters.
