Add testing possibility with random poi data
- Add function to determine node size for plotting depending on number of nodes

--- a/config.yml
+++ b/config.yml
@@ -55,3 +55,8 @@ logscale: True
 # Otherwise, or for testing purposes, set to False. This
 # will then generate random max_slope values.
 maxslopes_available: False
+
+# If pois files are available, set this to True.
+# Otherwise, or for testing purposes, set to False. This
+# will then generate random poi values.
+pois_available: False
