Define plot parameters through config.yml
- Polish face loop plot

--- a/config.yml
+++ b/config.yml
@@ -79,3 +79,16 @@ pois_available: True
 bornholm_delta:
   - -220000 # east
   - 120000 # north
+
+# PLOT PARAMETERS
+plotparam:
+  edge_classification_colors:
+    "too_short": "#000000"
+    "ideal_range": "#00CB00"
+    "above_ideal": "#FFB900"
+    "too_long": "#E10000"
+  loop_classification_colors:
+    "too_short": "#3182bd"
+    "ideal_range": "#bdd7e7"
+    "too_long": "#fd8d3c"
+  dpi: 96
