--- a/config.yml
+++ b/config.yml
@@ -21,7 +21,7 @@ mperunit: 1
 # For now explore two scenarios:
 # 0: Family with small children
 # 1: Teenage/adult leisure cyclist
-scenarioid: 0
+scenarioid: 1
 
 scenario:
   - name: "Family with children" # 0
@@ -96,6 +96,7 @@ plotparam:
   color:
     "neutral": "#444444"
     "dknt_green": "#009F92"
+    "noloop": [0.95, 0.95, 0.95, 1]
   edge_classification_colors:
     "below_ideal": "#000000"
     "ideal_range": "#bdd7e7"
