--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - azure-core-cpp=1.10.3=he231e37_1
   - azure-storage-blobs-cpp=12.10.0=h6aa02a4_0
   - azure-storage-common-cpp=12.5.0=h607ffeb_2
+  - beautifulsoup4=4.12.3=pyha770c72_0
   - blosc=1.21.5=hc338f07_0
   - branca=0.7.1=pyhd8ed1ab_0
   - brotli=1.1.0=hb547adb_1
@@ -17,9 +18,9 @@ dependencies:
   - brotli-python=1.1.0=py312h9f69965_1
   - bzip2=1.0.8=h93a5062_5
   - c-ares=1.26.0=h93a5062_0
-  - ca-certificates=2024.2.2=hf0a4a13_0
+  - ca-certificates=2025.7.14=hbd8a1cb_0
   - cairo=1.18.0=hd1e100b_0
-  - certifi=2024.2.2=pyhd8ed1ab_0
+  - certifi=2025.7.14=pyhd8ed1ab_0
   - cffi=1.16.0=py312h8e38eb3_0
   - cfgv=3.3.1=pyhd8ed1ab_0
   - cfitsio=4.3.1=h808cd33_0
@@ -59,6 +60,9 @@ dependencies:
   - giflib=5.2.1=h1a8c8d9_3
   - glpk=5.0=h6d7a090_0
   - gmp=6.3.0=h965bd2d_0
+  - h3=4.3.0=hc039f4b_1
+  - h3-py=4.3.0=py312he0c8795_1
+  - h3pandas=0.3.0=pyhd8ed1ab_0
   - hdf4=4.2.15=h2ee6834_7
   - hdf5=1.14.3=nompi_h5bb55e9_100
   - icu=73.2=hc8870d7_0
@@ -69,12 +73,14 @@ dependencies:
   - iniconfig=2.0.0=pyhd8ed1ab_0
   - ipykernel=6.29.2=pyh3cd1d5f_0
   - ipython=8.21.0=pyh707e725_0
+  - ipywidgets=8.1.5=pyhd8ed1ab_0
   - jedi=0.19.1=pyhd8ed1ab_0
   - jinja2=3.1.3=pyhd8ed1ab_0
   - joblib=1.3.2=pyhd8ed1ab_0
   - json-c=0.17=h40ed0f5_0
   - jupyter_client=8.6.0=pyhd8ed1ab_0
   - jupyter_core=5.7.1=py312h81bd7bf_0
+  - jupyterlab_widgets=3.0.13=pyhd8ed1ab_0
   - kealib=1.5.3=h210d843_0
   - kiwisolver=1.4.5=py312h389731b_1
   - krb5=1.21.2=h92f50d5_0
@@ -91,7 +97,7 @@ dependencies:
   - libcblas=3.9.0=21_osxarm64_openblas
   - libcrc32c=1.1.2=hbdafb3b_0
   - libcurl=8.5.0=h2d989ff_0
-  - libcxx=16.0.6=h4653b0c_0
+  - libcxx=20.1.8=hf598326_1
   - libdeflate=1.19=hb547adb_0
   - libedit=3.1.20191231=hc8eb9b7_2
   - libev=4.33=h93a5062_2
@@ -113,6 +119,7 @@ dependencies:
   - libpng=1.6.42=h091b4b1_0
   - libpq=16.2=h0f8b458_0
   - libprotobuf=4.25.1=h810fc01_1
+  - libpysal=4.12.1=pyhd8ed1ab_0
   - libre2-11=2023.06.02=h1753957_0
   - librttopo=1.1.0=hc8f776e_15
   - libsodium=1.0.18=h27ca646_1
@@ -134,6 +141,7 @@ dependencies:
   - matplotlib-base=3.8.3=py312ha6faf65_0
   - matplotlib-inline=0.1.6=pyhd8ed1ab_0
   - minizip=4.0.4=hc35e051_0
+  - momepy=0.8.0=pyhd8ed1ab_0
   - munkres=1.1.4=pyh9f0ad1d_0
   - ncurses=6.4=h463b476_2
   - nest-asyncio=1.6.0=pyhd8ed1ab_0
@@ -143,7 +151,7 @@ dependencies:
   - nss=3.98=h5ce2875_0
   - numpy=1.26.4=py312h8442bc7_0
   - openjpeg=2.5.0=h4c1507b_3
-  - openssl=3.2.1=h0d3ecfb_0
+  - openssl=3.5.1=h81ee809_0
   - packaging=23.2=pyhd8ed1ab_0
   - pandas=2.2.0=py312h88edd18_0
   - parso=0.8.3=pyhd8ed1ab_0
@@ -189,6 +197,7 @@ dependencies:
   - shapely=2.0.3=py312h04e4829_0
   - six=1.16.0=pyh6c4a22f_0
   - snappy=1.1.10=h17c5cce_0
+  - soupsieve=2.5=pyhd8ed1ab_1
   - sqlite=3.45.1=hf2abe2d_0
   - stack_data=0.6.2=pyhd8ed1ab_0
   - texttable=1.7.0=pyhd8ed1ab_0
@@ -197,6 +206,7 @@ dependencies:
   - tk=8.6.13=h5083fa2_1
   - tomli=2.0.1=pyhd8ed1ab_0
   - tornado=6.4=py312he37b823_0
+  - tqdm=4.66.5=pyhd8ed1ab_0
   - traitlets=5.14.1=pyhd8ed1ab_0
   - typing_extensions=4.9.0=pyha770c72_0
   - tzcode=2024a=h93a5062_0
@@ -207,6 +217,7 @@ dependencies:
   - virtualenv=20.25.0=pyhd8ed1ab_0
   - wcwidth=0.2.13=pyhd8ed1ab_0
   - wheel=0.42.0=pyhd8ed1ab_0
+  - widgetsnbextension=4.0.13=pyhd8ed1ab_0
   - xerces-c=3.2.5=hf393695_0
   - xorg-libxau=1.0.11=hb547adb_0
   - xorg-libxdmcp=1.1.3=h27ca646_0
@@ -217,3 +228,4 @@ dependencies:
   - zipp=3.17.0=pyhd8ed1ab_0
   - zlib=1.2.13=h53f4e23_5
   - zstd=1.5.5=h4f39d0f_0
+prefix: /Users/mszell/miniforge3/envs/bikenwloops
