--- a/environment.yml
+++ b/environment.yml
@@ -3,92 +3,158 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - access=1.1.9=pyhd8ed1ab_2
+  - affine=2.4.0=pyhd8ed1ab_1
+  - aiobotocore=2.23.2=pyhe01879c_1
+  - aiohappyeyeballs=2.6.1=pyhd8ed1ab_0
+  - aiohttp=3.12.15=py312h6daa0e5_0
+  - aioitertools=0.12.0=pyhd8ed1ab_1
+  - aiosignal=1.4.0=pyhd8ed1ab_0
+  - amply=0.1.6=pyhd8ed1ab_1
   - appnope=0.1.4=pyhd8ed1ab_0
+  - arm_pyart=2.1.0=py312hea69d52_0
   - arpack=3.8.0=nompi_ha3438d0_101
   - asttokens=2.4.1=pyhd8ed1ab_0
   - attrs=23.2.0=pyh71513ae_0
-  - azure-core-cpp=1.10.3=he231e37_1
-  - azure-storage-blobs-cpp=12.10.0=h6aa02a4_0
-  - azure-storage-common-cpp=12.5.0=h607ffeb_2
+  - aws-c-auth=0.9.0=h9eee66f_19
+  - aws-c-cal=0.9.2=hd08b81e_1
+  - aws-c-common=0.12.4=h6caf38d_0
+  - aws-c-compression=0.3.1=habbe1e8_6
+  - aws-c-event-stream=0.5.5=hd1b68e1_3
+  - aws-c-http=0.10.4=h09a8a51_0
+  - aws-c-io=0.21.2=hc6344be_1
+  - aws-c-mqtt=0.13.3=h625c29d_3
+  - aws-c-s3=0.8.6=h6ded10d_2
+  - aws-c-sdkutils=0.2.4=habbe1e8_1
+  - aws-checksums=0.2.7=habbe1e8_2
+  - aws-crt-cpp=0.33.1=h54a40e1_2
+  - aws-sdk-cpp=1.11.606=ha924a42_1
+  - azure-core-cpp=1.16.0=ha1c5762_0
+  - azure-identity-cpp=1.12.0=hd83eed2_0
+  - azure-storage-blobs-cpp=12.14.0=he094cc7_1
+  - azure-storage-common-cpp=12.10.0=h12fd690_2
+  - azure-storage-files-datalake-cpp=12.12.0=h30213e0_3
   - beautifulsoup4=4.12.3=pyha770c72_0
-  - blosc=1.21.5=hc338f07_0
+  - blosc=1.21.6=h7dd00d9_1
+  - bokeh=3.7.3=pyhd8ed1ab_0
+  - botocore=1.39.8=pyge310_1234567_0
   - branca=0.7.1=pyhd8ed1ab_0
   - brotli=1.1.0=hb547adb_1
   - brotli-bin=1.1.0=hb547adb_1
   - brotli-python=1.1.0=py312h9f69965_1
   - bzip2=1.0.8=h93a5062_5
-  - c-ares=1.26.0=h93a5062_0
-  - ca-certificates=2025.7.14=hbd8a1cb_0
-  - cairo=1.18.0=hd1e100b_0
-  - certifi=2025.7.14=pyhd8ed1ab_0
+  - c-ares=1.34.5=h5505292_0
+  - ca-certificates=2025.8.3=hbd8a1cb_0
+  - cached-property=1.5.2=hd8ed1ab_1
+  - cached_property=1.5.2=pyha770c72_1
+  - cairo=1.18.4=h6a3b0d2_0
+  - capnproto=1.2.0=h1b2d5af_0
+  - cartopy=0.25.0=py312h98f7732_0
+  - certifi=2025.8.3=pyhd8ed1ab_0
   - cffi=1.16.0=py312h8e38eb3_0
   - cfgv=3.3.1=pyhd8ed1ab_0
-  - cfitsio=4.3.1=h808cd33_0
+  - cfitsio=4.6.2=h7200ff5_1
+  - cftime=1.6.4=py312h755e627_1
   - charset-normalizer=3.3.2=pyhd8ed1ab_0
   - click=8.1.7=unix_pyh707e725_0
   - click-plugins=1.1.1=py_0
   - cligj=0.7.2=pyhd8ed1ab_1
+  - cloudpickle=3.1.1=pyhd8ed1ab_0
+  - cmweather=0.3.2=pyhd8ed1ab_1
+  - coin-or-cbc=2.10.12=h8ec3750_2
+  - coin-or-cgl=0.60.9=h7ef17a8_4
+  - coin-or-clp=1.17.10=h73553b4_1
+  - coin-or-osi=0.108.11=h1c7c69d_4
+  - coin-or-utils=2.11.12=h38baedf_2
   - colorama=0.4.6=pyhd8ed1ab_0
   - comm=0.2.1=pyhd8ed1ab_0
   - contourpy=1.2.0=py312h76e736e_0
+  - cpython=3.12.11=py312hd8ed1ab_0
   - cycler=0.12.1=pyhd8ed1ab_0
+  - cyrus-sasl=2.1.28=ha1cbb27_0
+  - cytoolz=1.0.1=py312hea69d52_0
+  - dask=2025.7.0=pyhe01879c_0
+  - dask-core=2025.7.0=pyhe01879c_1
   - debugpy=1.8.1=py312h20a0b95_0
   - decorator=5.1.1=pyhd8ed1ab_0
+  - deprecation=2.1.0=pyh9f0ad1d_0
   - distlib=0.3.8=pyhd8ed1ab_0
+  - distributed=2025.7.0=pyhe01879c_0
+  - docutils=0.22=pyhd8ed1ab_0
+  - esda=2.7.1=pyhd8ed1ab_1
   - exceptiongroup=1.2.0=pyhd8ed1ab_2
   - executing=2.0.1=pyhd8ed1ab_0
-  - expat=2.5.0=hb7217d7_1
+  - expat=2.7.1=hec049ff_0
   - filelock=3.13.1=pyhd8ed1ab_0
-  - fiona=1.9.5=py312hd158ed5_3
+  - fiona=1.10.1=py312hfd5e53c_3
+  - flexcache=0.3=pyhd8ed1ab_1
+  - flexparser=0.4=pyhd8ed1ab_1
+  - fmt=11.2.0=h440487c_0
   - folium=0.15.1=pyhd8ed1ab_0
   - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
   - font-ttf-inconsolata=3.000=h77eed37_0
   - font-ttf-source-code-pro=2.038=h77eed37_0
   - font-ttf-ubuntu=0.83=h77eed37_1
-  - fontconfig=2.14.2=h82840c6_0
+  - fontconfig=2.15.0=h1383a14_1
   - fonts-conda-ecosystem=1=0
   - fonts-conda-forge=1=0
   - fonttools=4.49.0=py312he37b823_0
-  - freetype=2.12.1=hadb7bae_2
+  - freetype=2.13.3=hce30654_1
   - freexl=2.0.0=hfbad9fb_0
-  - gdal=3.8.4=py312h56161e1_0
+  - frozenlist=1.7.0=py312h512c567_0
+  - fsspec=2025.7.0=pyhd8ed1ab_0
+  - gdal=3.10.3=py312h93ff630_12
   - geopandas=0.14.3=pyhd8ed1ab_0
   - geopandas-base=0.14.3=pyha770c72_0
-  - geos=3.12.1=h965bd2d_0
-  - geotiff=1.7.1=h7bcba05_15
+  - geos=3.13.1=hc9a1286_0
+  - geotiff=1.7.4=h1d7e6e1_2
   - gettext=0.21.1=h0186832_0
-  - giflib=5.2.1=h1a8c8d9_3
+  - gflags=2.2.2=hf9b8971_1005
+  - giddy=2.3.6=pyhd8ed1ab_0
+  - giflib=5.2.2=h93a5062_0
+  - glog=0.7.1=heb240a5_0
   - glpk=5.0=h6d7a090_0
   - gmp=6.3.0=h965bd2d_0
+  - gmpy2=2.2.1=py312h524cf62_0
   - h3=4.3.0=hc039f4b_1
   - h3-py=4.3.0=py312he0c8795_1
   - h3pandas=0.3.0=pyhd8ed1ab_0
+  - h5netcdf=1.6.3=pyhd8ed1ab_0
+  - h5py=3.14.0=nompi_py312h35183de_100
   - hdf4=4.2.15=h2ee6834_7
-  - hdf5=1.14.3=nompi_h5bb55e9_100
-  - icu=73.2=hc8870d7_0
+  - hdf5=1.14.6=nompi_ha698983_101
+  - icu=75.1=hfee45f7_0
   - identify=2.5.35=pyhd8ed1ab_0
   - idna=3.6=pyhd8ed1ab_0
   - importlib-metadata=7.0.1=pyha770c72_0
   - importlib_metadata=7.0.1=hd8ed1ab_0
+  - inequality=1.1.2=pyhd8ed1ab_1
   - iniconfig=2.0.0=pyhd8ed1ab_0
   - ipykernel=6.29.2=pyh3cd1d5f_0
   - ipython=8.21.0=pyh707e725_0
   - ipywidgets=8.1.5=pyhd8ed1ab_0
   - jedi=0.19.1=pyhd8ed1ab_0
   - jinja2=3.1.3=pyhd8ed1ab_0
+  - jmespath=1.0.1=pyhd8ed1ab_1
   - joblib=1.3.2=pyhd8ed1ab_0
-  - json-c=0.17=h40ed0f5_0
+  - json-c=0.18=he4178ee_0
   - jupyter_client=8.6.0=pyhd8ed1ab_0
   - jupyter_core=5.7.1=py312h81bd7bf_0
   - jupyterlab_widgets=3.0.13=pyhd8ed1ab_0
-  - kealib=1.5.3=h210d843_0
+  - kealib=1.6.2=h6bc965c_0
   - kiwisolver=1.4.5=py312h389731b_1
-  - krb5=1.21.2=h92f50d5_0
-  - lcms2=2.16=ha0e7c42_0
+  - krb5=1.21.3=h237132a_0
+  - lat_lon_parser=1.3.1=pyhd8ed1ab_1
+  - lcms2=2.17=h7eeda09_0
   - lerc=4.0.0=h9a09cb3_0
-  - libabseil=20230802.1=cxx17_h13dd4ca_0
-  - libaec=1.1.2=h13dd4ca_1
-  - libarchive=3.7.2=hcacb583_1
+  - libabseil=20250512.1=cxx17_hd41c47c_0
+  - libaec=1.1.4=h51d1e36_0
+  - libarchive=3.8.1=gpl_h46e8061_100
+  - libarrow=21.0.0=h20b3f57_1_cpu
+  - libarrow-acero=21.0.0=h926bc74_1_cpu
+  - libarrow-compute=21.0.0=hd5cd9ca_1_cpu
+  - libarrow-dataset=21.0.0=h926bc74_1_cpu
+  - libarrow-substrait=21.0.0=hb375905_1_cpu
   - libblas=3.9.0=21_osxarm64_openblas
   - libboost-headers=1.84.0=hce30654_1
   - libbrotlicommon=1.1.0=hb547adb_1
@@ -96,136 +162,229 @@ dependencies:
   - libbrotlienc=1.1.0=hb547adb_1
   - libcblas=3.9.0=21_osxarm64_openblas
   - libcrc32c=1.1.2=hbdafb3b_0
-  - libcurl=8.5.0=h2d989ff_0
+  - libcurl=8.14.1=h73640d1_0
   - libcxx=20.1.8=hf598326_1
-  - libdeflate=1.19=hb547adb_0
+  - libdeflate=1.24=h5773f1b_0
   - libedit=3.1.20191231=hc8eb9b7_2
   - libev=4.33=h93a5062_2
-  - libexpat=2.5.0=hb7217d7_1
-  - libffi=3.4.2=h3422bc3_5
-  - libgdal=3.8.4=ha86f356_0
-  - libgfortran=5.0.0=13_2_0_hd922786_3
-  - libgfortran5=13.2.0=hf226fd6_3
-  - libglib=2.78.4=h1635a5e_0
-  - libgoogle-cloud=2.12.0=h49bbb43_5
-  - libgrpc=1.60.1=hfc68871_0
-  - libiconv=1.17=h0d3ecfb_2
-  - libjpeg-turbo=3.0.0=hb547adb_1
-  - libkml=1.3.0=h1eb4d9f_1018
+  - libevent=2.1.12=h2757513_1
+  - libexpat=2.7.1=hec049ff_0
+  - libffi=3.4.6=h1da3d7d_1
+  - libfreetype=2.13.3=hce30654_1
+  - libfreetype6=2.13.3=h1d14073_1
+  - libgdal=3.10.3=h2a6cc45_12
+  - libgdal-core=3.10.3=hef24e92_12
+  - libgdal-fits=3.10.3=h8bc01f8_12
+  - libgdal-grib=3.10.3=h10803d7_12
+  - libgdal-hdf4=3.10.3=h81a176f_12
+  - libgdal-hdf5=3.10.3=hfba33d5_12
+  - libgdal-jp2openjpeg=3.10.3=h82802c5_12
+  - libgdal-kea=3.10.3=hf55370c_12
+  - libgdal-netcdf=3.10.3=heaf6e9b_12
+  - libgdal-pdf=3.10.3=hd2f999e_12
+  - libgdal-pg=3.10.3=h0605a19_12
+  - libgdal-postgisraster=3.10.3=h0605a19_12
+  - libgdal-tiledb=3.10.3=h2652639_12
+  - libgdal-xls=3.10.3=hfe707a8_12
+  - libgfortran=5.0.0=14_2_0_h6c33f7e_103
+  - libgfortran5=14.2.0=h6c33f7e_103
+  - libglib=2.84.2=hbec27ea_0
+  - libgoogle-cloud=2.39.0=head0a95_0
+  - libgoogle-cloud-storage=2.39.0=hfa3a374_0
+  - libgrpc=1.73.1=hcdac78c_0
+  - libiconv=1.18=hfe07756_1
+  - libintl=0.25.1=h493aca8_0
+  - libjpeg-turbo=3.1.0=h5505292_0
+  - libkml=1.3.0=he250239_1021
   - liblapack=3.9.0=21_osxarm64_openblas
-  - libnetcdf=4.9.2=nompi_h291a7c2_113
-  - libnghttp2=1.58.0=ha4dd798_1
+  - liblapacke=3.9.0=21_osxarm64_openblas
+  - libllvm14=14.0.6=hd1a9a77_4
+  - liblzma=5.8.1=h39f12f2_2
+  - liblzma-devel=5.8.1=h39f12f2_2
+  - libnetcdf=4.9.2=nompi_h2d3d5cf_118
+  - libnghttp2=1.64.0=h6d7220d_0
+  - libntlm=1.8=h5505292_0
   - libopenblas=0.3.26=openmp_h6c19121_0
-  - libpng=1.6.42=h091b4b1_0
-  - libpq=16.2=h0f8b458_0
-  - libprotobuf=4.25.1=h810fc01_1
-  - libpysal=4.12.1=pyhd8ed1ab_0
-  - libre2-11=2023.06.02=h1753957_0
-  - librttopo=1.1.0=hc8f776e_15
+  - libopentelemetry-cpp=1.21.0=he15edb5_1
+  - libopentelemetry-cpp-headers=1.21.0=hce30654_1
+  - libparquet=21.0.0=h3402b2e_1_cpu
+  - libpng=1.6.50=h280e0eb_1
+  - libpq=17.5=h6896619_0
+  - libprotobuf=6.31.1=h702a38d_1
+  - libpysal=4.13.0=pyhd8ed1ab_1
+  - libre2-11=2025.07.22=hb7c0934_0
+  - librttopo=1.1.0=h26cc057_18
   - libsodium=1.0.18=h27ca646_1
   - libspatialindex=1.9.3=hbdafb3b_4
-  - libspatialite=5.1.0=h69abc6b_4
-  - libsqlite=3.45.1=h091b4b1_0
-  - libssh2=1.11.0=h7a5bd25_0
-  - libtiff=4.6.0=ha8a6c65_2
-  - libwebp-base=1.3.2=hb547adb_0
+  - libspatialite=5.1.0=hea0a7cd_14
+  - libsqlite=3.50.4=h4237e3c_0
+  - libssh2=1.11.1=h1590b86_0
+  - libthrift=0.22.0=h14a376c_1
+  - libtiff=4.7.0=h2f21f7c_5
+  - libutf8proc=2.10.0=h74a6958_0
+  - libwebp-base=1.6.0=h07db88b_0
   - libxcb=1.15=hf346824_0
-  - libxml2=2.12.5=h0d0cfa8_0
-  - libzip=1.10.1=ha0bc3c6_3
-  - libzlib=1.2.13=h53f4e23_5
+  - libxml2=2.13.8=h52572c6_0
+  - libxslt=1.1.43=h429d6fd_0
+  - libzip=1.11.2=h1336266_0
+  - libzlib=1.3.1=h8359307_2
   - llvm-openmp=17.0.6=hcd81f8e_0
-  - lz4-c=1.9.4=hb7217d7_0
+  - llvmlite=0.42.0=py312h17030e7_1
+  - locket=1.0.0=pyhd8ed1ab_0
+  - lz4=4.4.4=py312hf263c89_0
+  - lz4-c=1.10.0=h286801f_1
   - lzo=2.10=h642e427_1000
-  - mapclassify=2.6.1=pyhd8ed1ab_0
+  - mapclassify=2.10.0=pyhd8ed1ab_1
   - markupsafe=2.1.5=py312he37b823_0
   - matplotlib-base=3.8.3=py312ha6faf65_0
   - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - minizip=4.0.4=hc35e051_0
-  - momepy=0.8.0=pyhd8ed1ab_0
+  - mda-xdrlib=0.2.0=pyhd8ed1ab_1
+  - mgwr=2.2.1=pyhd8ed1ab_1
+  - minizip=4.0.10=hff1a8ea_0
+  - momepy=0.10.0=pyhd8ed1ab_0
+  - mpc=1.3.1=h8f1351a_1
+  - mpfr=4.2.1=hb693164_3
+  - mpmath=1.3.0=pyhd8ed1ab_1
+  - msgpack-python=1.1.1=py312hb23fbb9_0
+  - multidict=6.6.3=py312hdb8e49c_0
   - munkres=1.1.4=pyh9f0ad1d_0
-  - ncurses=6.4=h463b476_2
+  - narwhals=2.0.1=pyhe01879c_0
+  - ncurses=6.5=h5e97a16_3
   - nest-asyncio=1.6.0=pyhd8ed1ab_0
+  - netcdf4=1.7.2=nompi_py312h3abf214_102
   - networkx=3.2.1=pyhd8ed1ab_0
+  - nlohmann_json=3.12.0=ha1acc90_0
   - nodeenv=1.8.0=pyhd8ed1ab_0
-  - nspr=4.35=hb7217d7_0
-  - nss=3.98=h5ce2875_0
+  - nspr=4.37=h31e89c2_0
+  - nss=3.114=h5efccd4_0
+  - numba=0.59.0=py312hbaff935_1
   - numpy=1.26.4=py312h8442bc7_0
-  - openjpeg=2.5.0=h4c1507b_3
+  - open-radar-data=0.5.0=pyhd8ed1ab_0
+  - openjpeg=2.5.3=h889cd5d_1
+  - openldap=2.6.10=hbe55e7a_0
   - openssl=3.5.1=h81ee809_0
+  - orc=2.2.0=hca0cb2d_0
   - packaging=23.2=pyhd8ed1ab_0
   - pandas=2.2.0=py312h88edd18_0
   - parso=0.8.3=pyhd8ed1ab_0
-  - pcre2=10.42=h26f9a81_0
+  - partd=1.4.2=pyhd8ed1ab_0
+  - patsy=1.0.1=pyhd8ed1ab_1
+  - pcre2=10.45=ha881caa_0
   - pexpect=4.9.0=pyhd8ed1ab_0
   - pickleshare=0.7.5=py_1003
-  - pillow=10.2.0=py312hac22aec_0
+  - pillow=10.3.0=py312h8a801b1_0
+  - pint=0.24.4=pyhe01879c_2
   - pip=24.0=pyhd8ed1ab_0
-  - pixman=0.43.2=hebf3989_0
+  - pixman=0.46.4=h2c80e29_0
   - platformdirs=4.2.0=pyhd8ed1ab_0
   - pluggy=1.4.0=pyhd8ed1ab_0
-  - poppler=24.02.0=h896e6cb_0
+  - pointpats=2.5.1=pyhd8ed1ab_1
+  - pooch=1.8.2=pyhd8ed1ab_1
+  - poppler=25.07.0=ha0fd84b_0
   - poppler-data=0.4.12=hd8ed1ab_0
-  - postgresql=16.2=h1d0603d_0
+  - postgresql=17.5=h6256e7e_0
   - pre-commit=3.6.2=pyha770c72_0
-  - proj=9.3.1=h93d94ba_0
+  - proj=9.6.2=hdbeaa80_1
+  - prometheus-cpp=1.3.0=h0967b3e_0
   - prompt-toolkit=3.0.42=pyha770c72_0
+  - propcache=0.3.1=py312h998013c_0
   - psutil=5.9.8=py312he37b823_0
   - pthread-stubs=0.4=h27ca646_1001
   - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pulp=2.8.0=py312h38bd297_2
   - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pyarrow=21.0.0=py312h1f38498_0
+  - pyarrow-core=21.0.0=py312h3dbcb64_0_cpu
   - pycparser=2.21=pyhd8ed1ab_0
   - pygments=2.17.2=pyhd8ed1ab_0
   - pyparsing=3.1.1=pyhd8ed1ab_0
-  - pyproj=3.6.1=py312h4d912e0_5
+  - pyproj=3.7.1=py312h237c406_1
+  - pysal=25.7=pyhd8ed1ab_0
+  - pyshp=3.0.0=pyhd8ed1ab_0
   - pysocks=1.7.1=pyha2e5f31_6
   - pytest=8.0.0=pyhd8ed1ab_0
-  - python=3.12.2=hdf0ec26_0_cpython
+  - python=3.12.11=hc22306f_0_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-igraph=0.11.4=py312h39a0190_0
+  - python-igraph=0.11.5=py312h4a427be_0
   - python-tzdata=2024.1=pyhd8ed1ab_0
   - python_abi=3.12=4_cp312
   - pytz=2024.1=pyhd8ed1ab_0
   - pyyaml=6.0.1=py312h02f2b3b_1
   - pyzmq=25.1.2=py312h1edf716_0
-  - re2=2023.06.02=h6135d0a_0
+  - quantecon=0.8.2=pyhd8ed1ab_0
+  - rasterio=1.4.3=py312h4623290_1
+  - rasterstats=0.20.0=pyhd8ed1ab_1
+  - re2=2025.07.22=h52998f3_0
   - readline=8.2=h92ec313_1
   - requests=2.31.0=pyhd8ed1ab_0
   - rtree=1.2.0=py312h22f7183_0
+  - s3fs=2025.7.0=pyhd8ed1ab_0
   - scikit-learn=1.4.1.post1=py312hd4306f4_0
   - scipy=1.12.0=py312h9d7df2b_2
+  - seaborn=0.13.2=hd8ed1ab_3
+  - seaborn-base=0.13.2=pyhd8ed1ab_3
+  - segregation=2.5.2=pyhd8ed1ab_0
   - setuptools=69.1.0=pyhd8ed1ab_1
-  - shapely=2.0.3=py312h04e4829_0
+  - setuptools-scm=8.3.1=pyhd8ed1ab_0
+  - setuptools_scm=8.3.1=hd8ed1ab_0
+  - shapely=2.1.1=py312hf733f26_0
+  - simplejson=3.20.1=py312hea69d52_0
   - six=1.16.0=pyh6c4a22f_0
-  - snappy=1.1.10=h17c5cce_0
+  - snappy=1.2.2=hd121638_0
+  - snuggs=1.4.7=pyhd8ed1ab_2
+  - sortedcontainers=2.4.0=pyhd8ed1ab_1
   - soupsieve=2.5=pyhd8ed1ab_1
-  - sqlite=3.45.1=hf2abe2d_0
+  - spaghetti=1.7.6=pyhd8ed1ab_1
+  - spdlog=1.15.3=h217a1f9_1
+  - spglm=1.1.0=pyhd8ed1ab_2
+  - spint=1.0.7=pyhd8ed1ab_2
+  - splot=1.1.7=pyhd8ed1ab_1
+  - spopt=0.7.0=pyhd8ed1ab_1
+  - spreg=1.8.3=pyhd8ed1ab_0
+  - spvcm=0.3.0=pyhd8ed1ab_2
+  - sqlite=3.50.4=hb5dd463_0
   - stack_data=0.6.2=pyhd8ed1ab_0
+  - statsmodels=0.14.5=py312hcde60ef_0
+  - sympy=1.14.0=pyh2585a3b_105
+  - tblib=3.1.0=pyhd8ed1ab_0
   - texttable=1.7.0=pyhd8ed1ab_0
   - threadpoolctl=3.3.0=pyhc1e730c_0
-  - tiledb=2.20.0=h49d9ff7_0
-  - tk=8.6.13=h5083fa2_1
+  - tiledb=2.28.1=h19ac965_1
+  - tk=8.6.13=h892fb3f_2
+  - tobler=0.12.1=pyhd8ed1ab_0
   - tomli=2.0.1=pyhd8ed1ab_0
+  - toolz=1.0.0=pyhd8ed1ab_1
   - tornado=6.4=py312he37b823_0
   - tqdm=4.66.5=pyhd8ed1ab_0
   - traitlets=5.14.1=pyhd8ed1ab_0
+  - typing-extensions=4.9.0=hd8ed1ab_0
   - typing_extensions=4.9.0=pyha770c72_0
   - tzcode=2024a=h93a5062_0
   - tzdata=2024a=h0c530f3_0
   - ukkonen=1.0.1=py312h389731b_4
-  - uriparser=0.9.7=hb7217d7_1
+  - uriparser=0.9.8=h00cdb27_0
   - urllib3=2.2.1=pyhd8ed1ab_0
+  - versioneer=0.29=pyhd8ed1ab_0
   - virtualenv=20.25.0=pyhd8ed1ab_0
   - wcwidth=0.2.13=pyhd8ed1ab_0
   - wheel=0.42.0=pyhd8ed1ab_0
   - widgetsnbextension=4.0.13=pyhd8ed1ab_0
-  - xerces-c=3.2.5=hf393695_0
+  - wrapt=1.17.2=py312hea69d52_0
+  - xarray=2025.6.1=pyhd8ed1ab_1
+  - xerces-c=3.2.5=h92fc2f4_2
+  - xmltodict=0.14.2=pyhd8ed1ab_1
   - xorg-libxau=1.0.11=hb547adb_0
   - xorg-libxdmcp=1.1.3=h27ca646_0
+  - xradar=0.10.0=pyhd8ed1ab_0
   - xyzservices=2023.10.1=pyhd8ed1ab_0
-  - xz=5.2.6=h57fd34a_0
+  - xz=5.8.1=h9a6d368_2
+  - xz-gpl-tools=5.8.1=h9a6d368_2
+  - xz-tools=5.8.1=h39f12f2_2
   - yaml=0.2.5=h3422bc3_2
+  - yarl=1.20.1=py312h998013c_0
   - zeromq=4.3.5=h965bd2d_0
+  - zict=3.0.0=pyhd8ed1ab_1
   - zipp=3.17.0=pyhd8ed1ab_0
-  - zlib=1.2.13=h53f4e23_5
-  - zstd=1.5.5=h4f39d0f_0
+  - zlib=1.3.1=h8359307_2
+  - zstd=1.5.7=h6491c7d_2
 prefix: /Users/mszell/miniforge3/envs/bikenwloops
