--- a/config.yml
+++ b/config.yml
@@ -1,16 +1,16 @@
 # Provide the name of the study area/project as a slug.
 # Use https://you.tools/slugify/ if unsure.
-study_area: denmark
+study_area: zealand
 
-# # *discontinued* If using a combined study area, specify it here.
-# study_area_combined:
-#   denmark:
-#     - bornholm
-#     - funen
-#     - jutland
-#     - lollandfalster
-#     - longland
-#     - zealand
+# If using a combined study area, specify it here.
+study_area_combined:
+  denmark:
+    - bornholm
+    - funen
+    - jutland
+    - lollandfalster
+    - longland
+    - zealand
 
 # Provide meters per length unit.
 # If lengths are given in m, use 1.
